--- a/01_materials/labs/02_data_engineering.ipynb
+++ b/01_materials/labs/02_data_engineering.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "%load_ext dotenv\n",
-    "%dotenv "
+    "%dotenv"
    ]
   },
   {
@@ -3459,7 +3459,252 @@
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Adj Close</th>\n",
+       "      <th>Volume</th>\n",
+       "      <th>source</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Close_lag_1</th>\n",
+       "      <th>Returns</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ticker</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>ACN</th>\n",
+       "      <td>2001-07-19</td>\n",
+       "      <td>15.10</td>\n",
+       "      <td>15.29</td>\n",
+       "      <td>15.00</td>\n",
+       "      <td>15.17</td>\n",
+       "      <td>11.404394</td>\n",
+       "      <td>34994300.0</td>\n",
+       "      <td>ACN.csv</td>\n",
+       "      <td>2001</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ACN</th>\n",
+       "      <td>2001-07-20</td>\n",
+       "      <td>15.05</td>\n",
+       "      <td>15.05</td>\n",
+       "      <td>14.80</td>\n",
+       "      <td>15.01</td>\n",
+       "      <td>11.284108</td>\n",
+       "      <td>9238500.0</td>\n",
+       "      <td>ACN.csv</td>\n",
+       "      <td>2001</td>\n",
+       "      <td>153.839996</td>\n",
+       "      <td>-0.902431</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ACN</th>\n",
+       "      <td>2001-07-23</td>\n",
+       "      <td>15.00</td>\n",
+       "      <td>15.01</td>\n",
+       "      <td>14.55</td>\n",
+       "      <td>15.00</td>\n",
+       "      <td>11.276587</td>\n",
+       "      <td>7501000.0</td>\n",
+       "      <td>ACN.csv</td>\n",
+       "      <td>2001</td>\n",
+       "      <td>154.550003</td>\n",
+       "      <td>-0.902944</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ACN</th>\n",
+       "      <td>2001-07-24</td>\n",
+       "      <td>14.95</td>\n",
+       "      <td>14.97</td>\n",
+       "      <td>14.70</td>\n",
+       "      <td>14.86</td>\n",
+       "      <td>11.171341</td>\n",
+       "      <td>3537300.0</td>\n",
+       "      <td>ACN.csv</td>\n",
+       "      <td>2001</td>\n",
+       "      <td>156.380005</td>\n",
+       "      <td>-0.904975</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ACN</th>\n",
+       "      <td>2001-07-25</td>\n",
+       "      <td>14.70</td>\n",
+       "      <td>14.95</td>\n",
+       "      <td>14.65</td>\n",
+       "      <td>14.95</td>\n",
+       "      <td>11.238999</td>\n",
+       "      <td>4208100.0</td>\n",
+       "      <td>ACN.csv</td>\n",
+       "      <td>2001</td>\n",
+       "      <td>157.669998</td>\n",
+       "      <td>-0.905182</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ZIXI</th>\n",
+       "      <td>2020-03-26</td>\n",
+       "      <td>4.06</td>\n",
+       "      <td>4.53</td>\n",
+       "      <td>3.88</td>\n",
+       "      <td>4.51</td>\n",
+       "      <td>4.510000</td>\n",
+       "      <td>1668500.0</td>\n",
+       "      <td>ZIXI.csv</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>4.040000</td>\n",
+       "      <td>0.116337</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ZIXI</th>\n",
+       "      <td>2020-03-27</td>\n",
+       "      <td>4.49</td>\n",
+       "      <td>4.71</td>\n",
+       "      <td>4.10</td>\n",
+       "      <td>4.60</td>\n",
+       "      <td>4.600000</td>\n",
+       "      <td>1146800.0</td>\n",
+       "      <td>ZIXI.csv</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>0.150000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ZIXI</th>\n",
+       "      <td>2020-03-30</td>\n",
+       "      <td>4.83</td>\n",
+       "      <td>4.87</td>\n",
+       "      <td>4.44</td>\n",
+       "      <td>4.64</td>\n",
+       "      <td>4.640000</td>\n",
+       "      <td>1212000.0</td>\n",
+       "      <td>ZIXI.csv</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>3.850000</td>\n",
+       "      <td>0.205195</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ZIXI</th>\n",
+       "      <td>2020-03-31</td>\n",
+       "      <td>4.60</td>\n",
+       "      <td>4.69</td>\n",
+       "      <td>4.10</td>\n",
+       "      <td>4.31</td>\n",
+       "      <td>4.310000</td>\n",
+       "      <td>1057200.0</td>\n",
+       "      <td>ZIXI.csv</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>3.770000</td>\n",
+       "      <td>0.143236</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ZIXI</th>\n",
+       "      <td>2020-04-01</td>\n",
+       "      <td>4.11</td>\n",
+       "      <td>4.16</td>\n",
+       "      <td>3.80</td>\n",
+       "      <td>3.82</td>\n",
+       "      <td>3.820000</td>\n",
+       "      <td>539500.0</td>\n",
+       "      <td>ZIXI.csv</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>3.780000</td>\n",
+       "      <td>0.010582</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>239659 rows × 11 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Date   Open   High    Low  Close  Adj Close      Volume  \\\n",
+       "ticker                                                                 \n",
+       "ACN    2001-07-19  15.10  15.29  15.00  15.17  11.404394  34994300.0   \n",
+       "ACN    2001-07-20  15.05  15.05  14.80  15.01  11.284108   9238500.0   \n",
+       "ACN    2001-07-23  15.00  15.01  14.55  15.00  11.276587   7501000.0   \n",
+       "ACN    2001-07-24  14.95  14.97  14.70  14.86  11.171341   3537300.0   \n",
+       "ACN    2001-07-25  14.70  14.95  14.65  14.95  11.238999   4208100.0   \n",
+       "...           ...    ...    ...    ...    ...        ...         ...   \n",
+       "ZIXI   2020-03-26   4.06   4.53   3.88   4.51   4.510000   1668500.0   \n",
+       "ZIXI   2020-03-27   4.49   4.71   4.10   4.60   4.600000   1146800.0   \n",
+       "ZIXI   2020-03-30   4.83   4.87   4.44   4.64   4.640000   1212000.0   \n",
+       "ZIXI   2020-03-31   4.60   4.69   4.10   4.31   4.310000   1057200.0   \n",
+       "ZIXI   2020-04-01   4.11   4.16   3.80   3.82   3.820000    539500.0   \n",
+       "\n",
+       "          source  Year  Close_lag_1   Returns  \n",
+       "ticker                                         \n",
+       "ACN      ACN.csv  2001          NaN       NaN  \n",
+       "ACN      ACN.csv  2001   153.839996 -0.902431  \n",
+       "ACN      ACN.csv  2001   154.550003 -0.902944  \n",
+       "ACN      ACN.csv  2001   156.380005 -0.904975  \n",
+       "ACN      ACN.csv  2001   157.669998 -0.905182  \n",
+       "...          ...   ...          ...       ...  \n",
+       "ZIXI    ZIXI.csv  2020     4.040000  0.116337  \n",
+       "ZIXI    ZIXI.csv  2020     4.000000  0.150000  \n",
+       "ZIXI    ZIXI.csv  2020     3.850000  0.205195  \n",
+       "ZIXI    ZIXI.csv  2020     3.770000  0.143236  \n",
+       "ZIXI    ZIXI.csv  2020     3.780000  0.010582  \n",
+       "\n",
+       "[239659 rows x 11 columns]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df = dd_rets.compute()\n",
     "df.to_csv(\"test.csv\")"
@@ -3634,16 +3879,144 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><strong>Dask DataFrame Structure:</strong></div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Adj Close</th>\n",
+       "      <th>Volume</th>\n",
+       "      <th>source</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Close_lag_1</th>\n",
+       "      <th>Returns</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>npartitions=60</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>ACN</th>\n",
+       "      <td>object</td>\n",
+       "      <td>object</td>\n",
+       "      <td>object</td>\n",
+       "      <td>object</td>\n",
+       "      <td>object</td>\n",
+       "      <td>object</td>\n",
+       "      <td>object</td>\n",
+       "      <td>object</td>\n",
+       "      <td>object</td>\n",
+       "      <td>object</td>\n",
+       "      <td>object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ALDX</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ZIXI</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ZIXI</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<div>Dask Name: assign, 9 expressions</div>"
+      ],
+      "text/plain": [
+       "Dask DataFrame Structure:\n",
+       "                  Date    Open    High     Low   Close Adj Close  Volume  source    Year Close_lag_1 Returns\n",
+       "npartitions=60                                                                                              \n",
+       "ACN             object  object  object  object  object    object  object  object  object      object  object\n",
+       "ALDX               ...     ...     ...     ...     ...       ...     ...     ...     ...         ...     ...\n",
+       "...                ...     ...     ...     ...     ...       ...     ...     ...     ...         ...     ...\n",
+       "ZIXI               ...     ...     ...     ...     ...       ...     ...     ...     ...         ...     ...\n",
+       "ZIXI               ...     ...     ...     ...     ...       ...     ...     ...     ...         ...     ...\n",
+       "Dask Name: assign, 9 expressions\n",
+       "Expr=Assign(frame=Assign(frame=GroupByApply(frame=SetIndex(frame=ReadParquetFSSpec(97443f3), _other='ticker', options={}), observed=False, group_keys=False, func=<function <lambda> at 0x000001D330697240>, args=(), kwargs={})))"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "dd_rets"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3704,7 +4077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3747,7 +4120,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "production-env (3.11.13)",
+   "display_name": "production-env",
    "language": "python",
    "name": "python3"
   },
@@ -3761,7 +4134,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
